# async-weather-sdk

./: .gitignore  HISTORY.rst  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
src/async_weather_sdk/: base.py  qq.py
tests/: conftest.py  test_client.py  test_qq.py
